feat: ajout inmemory repo et ajouter film postgres